--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,16 +21,6 @@ config = "0.11"
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version  = "1", features = ["derive"] }
-
-
-[dependencies.sqlx]
-version = "0.5.7"
-default-features = false
-features = [
-    "runtime-actix-rustls",
-    "macros",
-    "postgres",
-    "uuid",
-    "chrono",
-    "migrate"    
-]
+uuid = { version = "0.8.1", features = ["v4"] }
+chrono = "0.4.15"
+sqlx = { version = "0.5.5", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
